# vigilant-cpp

./: CMakeLists.txt  README.md
cmake/: vigilant-logger-config.cmake.in
src/: logger.cpp  logger.h
